--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tailwind:init": "tailwindcss init"
   },
   "dependencies": {
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
